[package]
name = "difference_constraints_system_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/paper_version.rs"

[dependencies]
petgraph = "0.6.2"
pathfinding = "3.0.13"
priority-queue = "1.2.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
